# Universal-Knowledge-Database

./: Makefile  README.md  pyproject.toml  ukdb.cmd
docs/: CLI.md  PACK_FORMAT.md  SPEC_UKDB_0_2.md
examples/kotimainen-os.ukdb/: ukdb.yaml
examples/kotimainen-os.ukdb/blobs/: 123.md
schemas/ukdb-0.2/: claim.schema.json  source.schema.json
src/ukdbtool/: __main__.py  cli.py
src/ukdbtool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ukdbtool/io/: __init__.py  yamlio.py
src/ukdbtool/pack/: build.py  export.py  hash.py  validate.py  yamlio.py
tests/: test_export.py  test_pack_flow.py
tmp-built.ukdb/: sources.ndjson  ukdb.yaml
tmp-pack.ukdb/: ukdb.yaml
